Updated the summary from local machine

--- a/wiki/Overview.wiki
+++ b/wiki/Overview.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#summary Overview of the JEasyUML Tool.
 #labels Featured,Phase-Requirements
 
 = Overview =
